Implement adding new shopping lists and items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">ShoppingList</string>
+    <string name="add_item">add item</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="add_item_dialog_title">Add item</string>
+    <string name="edit_item_dialog_title">Edit item: %s</string>
+    <string name="add_shopping_list_dialog_title">Add shopping list</string>
+    <string name="edit_shopping_list_dialog_title">Edit list: %s</string>
 </resources>
